--- a/HodEngine/HodEngine.vcxproj.filters
+++ b/HodEngine/HodEngine.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="Color.cpp">
       <Filter>Core</Filter>
     </ClCompile>
+    <ClCompile Include="DebugLine.cpp">
+      <Filter>Utils</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CameraComponent.h">
@@ -151,6 +154,9 @@
     </ClInclude>
     <ClInclude Include="FreeCam.h">
       <Filter>SampleTest</Filter>
+    </ClInclude>
+    <ClInclude Include="DebugLine.h">
+      <Filter>Utils</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
