--- a/HodEngine/HodEngine.vcxproj
+++ b/HodEngine/HodEngine.vcxproj
@@ -59,13 +59,15 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(SolutionDir)/glfw/include;$(SolutionDir)/AntTweakBar/TweakBar/include;$(SolutionDir)/PhysX/physx/include;$(SolutionDir)/PhysX/pxshared/include;$(SolutionDir)/glm;$(SolutionDir)/tinyobjloader;$(SolutionDir)/stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)/AntTweakBar/TweakBar/include;$(SolutionDir)/PhysX/physx/include;$(SolutionDir)/PhysX/pxshared/include;$(SolutionDir)/glm;$(SolutionDir)/tinyobjloader;$(SolutionDir)/stb;$(SolutionDir)/SDL/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)/glfw/Build/src/Debug;$(SolutionDir)/AntTweakBar/Build/TweakBar/Debug;$(SolutionDir)/PhysX/physx/bin/win.x86_64.vc141.mt/debug;$(SolutionDir)/AntTweakBar/Build/Renderer/Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>AntTweakBar.lib;ATBGuiRenderer.lib;glfw3.lib;PhysX_64.lib;PhysXFoundation_64.lib;PhysXExtensions_static_64.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)/glfw/Build/src/Debug;$(SolutionDir)/AntTweakBar/Build/TweakBar/Debug;$(SolutionDir)/PhysX/physx/bin/win.x86_64.vc141.mt/debug;$(SolutionDir)/AntTweakBar/Build/Renderer/Debug;$(SolutionDir)/SDL/VisualC/x64/Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>AntTweakBar.lib;ATBGuiRenderer.lib;PhysX_64.lib;PhysXFoundation_64.lib;PhysXExtensions_static_64.lib;SDL2.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <EntryPointSymbol>
+      </EntryPointSymbol>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -79,15 +81,17 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(SolutionDir)/glfw/include;$(SolutionDir)/AntTweakBar/TweakBar/include;$(SolutionDir)/PhysX/physx/include;$(SolutionDir)/PhysX/pxshared/include;$(SolutionDir)/glm;$(SolutionDir)/tinyobjloader;$(SolutionDir)/stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)/AntTweakBar/TweakBar/include;$(SolutionDir)/PhysX/physx/include;$(SolutionDir)/PhysX/pxshared/include;$(SolutionDir)/glm;$(SolutionDir)/tinyobjloader;$(SolutionDir)/stb;$(SolutionDir)/SDL/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)/glfw/Build/src/Release;$(SolutionDir)/AntTweakBar/Build/TweakBar/Release;$(SolutionDir)/PhysX/physx/bin/win.x86_64.vc141.mt/release;$(SolutionDir)/AntTweakBar/Build/Renderer/Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>AntTweakBar.lib;ATBGuiRenderer.lib;glfw3.lib;PhysX_64.lib;PhysXFoundation_64.lib;PhysXExtensions_static_64.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)/glfw/Build/src/Release;$(SolutionDir)/AntTweakBar/Build/TweakBar/Release;$(SolutionDir)/PhysX/physx/bin/win.x86_64.vc141.mt/release;$(SolutionDir)/AntTweakBar/Build/Renderer/Release;$(SolutionDir)/SDL/VisualC/x64/Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>AntTweakBar.lib;ATBGuiRenderer.lib;PhysX_64.lib;PhysXFoundation_64.lib;PhysXExtensions_static_64.lib;SDL2.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <EntryPointSymbol>
+      </EntryPointSymbol>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
