Preapre Vulkan and DirectX 12 renderer

--- a/HodEngine/HodEngine.vcxproj.filters
+++ b/HodEngine/HodEngine.vcxproj.filters
@@ -95,6 +95,15 @@
     <ClCompile Include="DebugMesh.cpp">
       <Filter>Utils</Filter>
     </ClCompile>
+    <ClCompile Include="Renderer.cpp">
+      <Filter>Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="RendererDirectX12.cpp">
+      <Filter>Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="RendererVulkan.cpp">
+      <Filter>Renderer</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CameraComponent.h">
@@ -176,6 +185,15 @@
     </ClInclude>
     <ClInclude Include="Tri_3P_3C.h">
       <Filter>Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="Renderer.h">
+      <Filter>Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="RendererDirectX12.h">
+      <Filter>Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="RendererVulkan.h">
+      <Filter>Renderer</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
