--- a/HodEngine/HodEngine.vcxproj
+++ b/HodEngine/HodEngine.vcxproj
@@ -65,7 +65,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)/glfw/Build/src/Debug;$(SolutionDir)/AntTweakBar/Build/TweakBar/Debug;$(SolutionDir)/PhysX/physx/bin/win.x86_64.vc141.mt/debug;$(SolutionDir)/AntTweakBar/Build/Renderer/Debug;$(SolutionDir)/SDL/VisualC/x64/Debug;%(AdditionalLibraryDirectories);C:\VulkanSDK\1.1.108.0\Lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>AntTweakBar.lib;ATBGuiRenderer.lib;PhysX_64.lib;PhysXFoundation_64.lib;PhysXExtensions_static_64.lib;SDL2.lib;d3d12.lib;vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>AntTweakBar.lib;ATBGuiRenderer.lib;PhysX_64.lib;PhysXFoundation_64.lib;PhysXExtensions_static_64.lib;SDL2.lib;d3d12.lib;dxgi.lib;vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <EntryPointSymbol>
       </EntryPointSymbol>
     </Link>
@@ -89,7 +89,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)/glfw/Build/src/Release;$(SolutionDir)/AntTweakBar/Build/TweakBar/Release;$(SolutionDir)/PhysX/physx/bin/win.x86_64.vc141.mt/release;$(SolutionDir)/AntTweakBar/Build/Renderer/Release;$(SolutionDir)/SDL/VisualC/x64/Release;%(AdditionalLibraryDirectories);C:\VulkanSDK\1.1.108.0\Lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>AntTweakBar.lib;ATBGuiRenderer.lib;PhysX_64.lib;PhysXFoundation_64.lib;PhysXExtensions_static_64.lib;SDL2.lib;d3d12.lib;vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>AntTweakBar.lib;ATBGuiRenderer.lib;PhysX_64.lib;PhysXFoundation_64.lib;PhysXExtensions_static_64.lib;SDL2.lib;d3d12.lib;dxgi.lib;vulkan-1.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <EntryPointSymbol>
       </EntryPointSymbol>
     </Link>
@@ -112,7 +112,10 @@
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="MaterialManager.cpp" />
     <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="RendererComponent.cpp" />
+    <ClCompile Include="RendererDirectX12.cpp" />
+    <ClCompile Include="RendererVulkan.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneComponent.cpp" />
     <ClCompile Include="Shader.cpp" />
@@ -141,7 +144,10 @@
     <ClInclude Include="Material.h" />
     <ClInclude Include="MaterialManager.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="Renderer.h" />
     <ClInclude Include="RendererComponent.h" />
+    <ClInclude Include="RendererDirectX12.h" />
+    <ClInclude Include="RendererVulkan.h" />
     <ClInclude Include="Scene.hpp" />
     <ClInclude Include="SceneComponent.h" />
     <ClInclude Include="Shader.h" />
